(lang dune 3.17)

(name json_parser)

(generate_opam_files true)

(source
 (github bbayazit16/ocaml-parser-combinators))

(authors "Barış")

(maintainers "Barış")

(license MIT)

(package
 (name json_parser)
 (synopsis "Parser Combinators and JSON Parser")
 (description "Parser Combinators and JSON Parser")
 (depends ocaml)
 (tags
  ("parser" "combinators" your project)))
